--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ ul li{
 }
 p{
     color: #727272;
-    margin-right: 5rem;
+    /* margin-right: 5rem; */
     font-size: 18px;
 }
 /* .details img{
@@ -159,13 +159,16 @@ height: 90vh;
 
 /* Details Page */
 .image-container{
+    display: flex;
     max-height: 30%;
-    text-align: center;
+    /* text-align: center; */
+    color: #727272;
 
 }
 .image-container img{
     max-width: 100%;
-    height: 600px;
+    height: 95vh;
+
 
 }
 
@@ -182,7 +185,52 @@ button{
 }
 
 .nav-buttons {
+    margin: auto;
+    padding: auto;
+    /* display: flex;
+    justify-content: space-between;
+    margin: 20px; */
+}
+.image-container h2 {
+    font-size: 20px;
+
+}
+
+.description{
+    display: flex;
+    flex-direction: row;
+
+}
+
+/* Title */
+.desc-text h2{
+
+}
+
+/* Descripion */
+.desc-text p{
+    text-align: center;
+    
+}
+/*contacts*/
+.contacts{
     display: flex;
     justify-content: space-between;
-    margin: 20px;
+    margin: 2ren;
+}
+.form-body{
+    color: #727272;
+}
+.form-body h2{
+    font-size: 21px;
+}
+form div{
+    padding-bottom: 0.2rem;
+
+}
+
+
+/* Biography */
+.biography h1, .exhibitions h1{
+    font-size: 24px;
 }
