Sty:fix image details style

--- a/templates/images/image_detail.html
+++ b/templates/images/image_detail.html
@@ -28,7 +28,7 @@
 
 
                 <div class="carousel__item active">
-                    <img class="px-5 {{image.category}}" src="{{ image.image.url }}" alt="Image Detail" />
+                    <img class="px-5 {{image.category}}" src="{{ image.larger_image.url }}" alt="Image Detail" />
                 </div>
 
                 <!-- Navigation buttons -->
