--- a/templates/base.html
+++ b/templates/base.html
@@ -1,40 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- More Meta Description-->
-    {% block meta %}
 
-    {% endblock meta %}
+    <head>
+        {% block google-tags %}
+        <!-- Google Tag Manager -->
+        <script>
+            (function (w, d, s, l, i) {
+                w[l] = w[l] || [];
+                w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+                var f = d.getElementsByTagName(s)[0],
+                    j = d.createElement(s),
+                    dl = l != "dataLayer" ? "&l=" + l : "";
+                j.async = true;
+                j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+                f.parentNode.insertBefore(j, f);
+            })(window, document, "script", "dataLayer", "GTM-PWDTTZV3");
+        </script>
+        <!-- End Google Tag Manager -->
 
-    <!-- Tags Block -->
-    {% comment %} {% for script in tracking_scripts %}
-        {% if script.active %}
-            {{ script.script|safe }}
-        {% endif %}
-    {% endfor %} {% endcomment %}
+        <!-- Tags Block -->
+        {% for script in tracking_scripts %}
+        <!--  -->
+            {% if script.active %}
+            <!--  -->
+                {{script.script|safe }}
+                <!--  -->
+            {% endif %}
+        {% endfor %}
+    <!--  -->
+        {% endblock google-tags %}
 
-    <!-- Title -->
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- More Meta Description-->
+        {% block meta %}
+        <!--  -->
+        {% endblock meta %}
 
-    {% comment %} <title>Document</title> {% endcomment %}
+        <!-- Title -->
 
-    <!-- BootStrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        {% comment %}
+        <title>Document</title>
+        {% endcomment %}
 
-    <!-- More Specific Stylesheets-->
-    {% block extracss %}
+        <!-- BootStrap -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+            crossorigin="anonymous" />
 
-    {% endblock extracss %}
+        <!-- More Specific Stylesheets-->
+        {% block extracss %} {% endblock extracss %}
+    </head>
 
+    <body>
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PWDTTZV3" height="0" width="0"
+                style="display: none; visibility: hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
 
-
-</head>
-<body>
-
-    <style>
-        .container-fluid{
+        <style>
+            .container-fluid{
             max-width: 100%;
             background-color:#C0C0C0 ;
             color: black;
@@ -45,41 +70,65 @@
             overflow: hidden;
 
         }
-
-        .space{
-            padding: 0rem 5rem;
-        }
-
-        @media (max-width: 768px) {
-            .space {
-                padding: 0rem .1rem;
+            .package-header {
+                max-width: 100%;
+                overflow: hidden;
             }
-        }
 
-        @media (max-width: 1024px) {
             .space {
-                padding: 0rem .1rem;
+                padding: 0rem 5rem;
             }
-        }
 
-    </style>
-    <div class="container-fluid">
+            @media (max-width: 768px) {
+                .space {
+                    padding: 0rem 0.1rem;
+                }
+            }
 
-        {% include "header.html" %}
-        {% include "navbar.html" %}
-        {% block content %}
+            @media (max-width: 1024px) {
+                .space {
+                    padding: 0rem 0.1rem;
+                }
+            }
 
+            footer .ilex {
+                font-size: xx-small;
+            }
+        </style>
+        <div class="container-fluid">
+            {% include "header.html" %}
+            <!--  -->
+            {% include "navbar.html" %}
 
-        {% endblock content %}
-    </div>
+            <div class="container package">
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            <!-- Content Body -->
+            {% block content%}
+            <!-- Content -->
+            {% endblock content %}
+
+            <!-- Footer -->
+            <footer>
+                <hr />
+                <div class="d-flex justify-content-around text-center">
+                    <p class="mx-3 small">
+                        &copy Vesna Longton 2024.
+                        <span class="mx-3 ilex">Developed by
+                            <a target="_blank" href="https://ilexdigital.com">IlexDigital</a></span>
+                    </p>
+                </div>
+                {% block footer %} {% endblock footer %}
+            </footer>
+        </div>
+            </div>
+        {% block scripts %} {% endblock scripts %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    </body>
 
-</body>
 </html>
