--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<section>
+<section class="container-fluid">
     <div class="intro d-flex align-items-stretch row">
         <div class="h-container col-md-8 mb-1">
             <div class="heading">
