--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,14 +4,14 @@
 
 
 <!-- Navbar -->
-            <section class="row">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light co-12">
+            <section class="container-fluid">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light col-12">
                     <a class="navbar-brand" href="#"></a>
                     <button class="navbar-toggler me-3" type="button" data-toggle="collapse" data-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse flex justify-content-start" id="navbarNav">
+                    <div class="collapse navbar-collapse flex justify-content-start pe-5" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
                                 <a class="nav-link mx-5" href={% url "gallery" %}>WEDDING PAINTING</a>
